force-app/main/default/objects/Case/fields/CaseTransferDate__c.field-meta.xml
<CustomField>
    <fullName>CaseTransferDate__c</fullName>
    <description>Stores the date and time when the case was handed off to classic team</description>
    <inlineHelpText>Stores the date and time when the case was handed off to classic team</inlineHelpText>
    <label>Case Transfer Date</label>
    <type>DateTime</type>
</CustomField>