force-app/main/default/objects/Case/fields/CaseTransferReason__c.field-meta.xml
<CustomField>
    <fullName>CaseTransferReason__c</fullName>
    <description>Reason selected by the agent when the case was handed off to the classic team.</description>
    <inlineHelpText>Reason selected by the agent when the case was handed off to the classic team.</inlineHelpText>
    <label>Case Transfer Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compensation required</fullName>
            </value>
            <value>
                <fullName>Network contact required</fullName>
            </value>
            <value>
                <fullName>Customer Care Specialist</fullName>
            </value>
            <value>
                <fullName>High Priority investigation</fullName>
            </value>
            <value>
                <fullName>Manager escalation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>