force-app/main/default/objects/Case/fields/CCU3rdPartyReference__c.field-meta.xml
<CustomField>
    <fullName>CCU3rdPartyReference__c</fullName>
    <description>2014-05 CCU</description>
    <label>3rd Party Reference</label>
    <length>40</length>
    <type>Text</type>
</CustomField>