force-app/main/default/objects/Case/fields/CCUEnquiryType__c.field-meta.xml
<CustomField>
    <fullName>CCUEnquiryType__c</fullName>
    <description>2014-05 CCU - Copied from RightNow portal</description>
    <label>CCU Enquiry Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Missing Item</fullName>
            </value>
            <value>
                <fullName>Delivery Issue</fullName>
            </value>
            <value>
                <fullName>General Enquiry</fullName>
            </value>
            <value>
                <fullName>POD Request</fullName>
            </value>
            <value>
                <fullName>RTS Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>