force-app/main/default/objects/Case/fields/CCUItemContents__c.field-meta.xml
<CustomField>
    <fullName>CCUItemContents__c</fullName>
    <description>2014-05 CCU</description>
    <label>Item Contents</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alcohol (Excluding Wine)</fullName>
            </value>
            <value>
                <fullName>Alcohol (Wine)</fullName>
            </value>
            <value>
                <fullName>Art/Craft/Supplies</fullName>
            </value>
            <value>
                <fullName>Books</fullName>
            </value>
            <value>
                <fullName>Camera/Camcorder</fullName>
            </value>
            <value>
                <fullName>Cash/Coins/Notes/Cheque</fullName>
            </value>
            <value>
                <fullName>CD/DVD/Video/Tape</fullName>
            </value>
            <value>
                <fullName>Clothing/Toys</fullName>
            </value>
            <value>
                <fullName>Computer - Laptop</fullName>
            </value>
            <value>
                <fullName>Computer Hardware/Software</fullName>
            </value>
            <value>
                <fullName>Cosmetics</fullName>
            </value>
            <value>
                <fullName>Documents</fullName>
            </value>
            <value>
                <fullName>Electronic Accessory</fullName>
            </value>
            <value>
                <fullName>Electrical Appliance</fullName>
            </value>
            <value>
                <fullName>Film/Photograph/Slide</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Footwear</fullName>
            </value>
            <value>
                <fullName>Gift Card/Certificate</fullName>
            </value>
            <value>
                <fullName>Healthcare Product</fullName>
            </value>
            <value>
                <fullName>Homeware</fullName>
            </value>
            <value>
                <fullName>Jewellery (Including Watches)</fullName>
            </value>
            <value>
                <fullName>Kitchenware</fullName>
            </value>
            <value>
                <fullName>Magazine/Poster</fullName>
            </value>
            <value>
                <fullName>Medicine</fullName>
            </value>
            <value>
                <fullName>Mobile Phone/Accessory</fullName>
            </value>
            <value>
                <fullName>Motor Part</fullName>
            </value>
            <value>
                <fullName>Other (Must list in Enquiry Details)</fullName>
            </value>
            <value>
                <fullName>Passport/Travel Documents</fullName>
            </value>
            <value>
                <fullName>Perfume</fullName>
            </value>
            <value>
                <fullName>Sportsgoods</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>