force-app/main/default/objects/Case/fields/CCUServiceUsed__c.field-meta.xml
<CustomField>
    <fullName>CCUServiceUsed__c</fullName>
    <description>2014-05 CCU</description>
    <label>Service Used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Australia Post Global Logistics</fullName>
            </value>
            <value>
                <fullName>Cash On Delivery</fullName>
            </value>
            <value>
                <fullName>Economy Air under 2kg</fullName>
            </value>
            <value>
                <fullName>Economy Sea over 2kg</fullName>
            </value>
            <value>
                <fullName>eParcel</fullName>
            </value>
            <value>
                <fullName>eParcel Call for Return</fullName>
            </value>
            <value>
                <fullName>Express Courier International</fullName>
            </value>
            <value>
                <fullName>Express Post</fullName>
            </value>
            <value>
                <fullName>Express Post Platinum</fullName>
            </value>
            <value>
                <fullName>International Courier</fullName>
            </value>
            <value>
                <fullName>International Express</fullName>
            </value>
            <value>
                <fullName>International Standard</fullName>
            </value>
            <value>
                <fullName>Letter Service</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Parcel Domestic</fullName>
            </value>
            <value>
                <fullName>Parcel Post</fullName>
            </value>
            <value>
                <fullName>Parcel Post Plus</fullName>
            </value>
            <value>
                <fullName>Parcel Post XL</fullName>
            </value>
            <value>
                <fullName>Premium Express Parcel</fullName>
            </value>
            <value>
                <fullName>Receipted Delivery</fullName>
            </value>
            <value>
                <fullName>Registered Post</fullName>
            </value>
            <value>
                <fullName>Registered Post International</fullName>
            </value>
            <value>
                <fullName>Standard Parcel</fullName>
            </value>
            <value>
                <fullName>StarTrack (Next Flight Premium &amp; Express)</fullName>
            </value>
            <value>
                <fullName>StarTrack Courier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>