force-app/main/default/objects/Case/fields/CHASEnquiryType__c.field-meta.xml
<CustomField>
    <fullName>CHASEnquiryType__c</fullName>
    <label>Enquiry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complaints &amp; feedback</fullName>
            </value>
            <value>
                <fullName>Missing or lost item</fullName>
            </value>
            <value>
                <fullName>Mail redirection &amp; hold</fullName>
            </value>
            <value>
                <fullName>Delivery issue</fullName>
            </value>
            <value>
                <fullName>Products &amp; services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>