force-app/main/default/objects/Case/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Suggestion</fullName>
            </value>
            <value>
                <fullName>Compliment</fullName>
            </value>
            <value>
                <fullName>Adhoc Request</fullName>
            </value>
            <value>
                <fullName>Ongoing Scheduled</fullName>
            </value>
            <value>
                <fullName>Develop New Solution</fullName>
            </value>
            <value>
                <fullName>Enquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>