force-app/main/default/objects/Case/fields/ClosedBySystem__c.field-meta.xml
<CustomField>
    <fullName>ClosedBySystem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SSSW - A Checkbox to determine if this Case was automatically closed by the system i.e if the Customer has not responded. This is to be used for reporting and not visible by the user.</description>
    <label>Closed by System</label>
    <type>Checkbox</type>
</CustomField>