force-app/main/default/objects/Case/fields/ClosureOwnerRole__c.field-meta.xml
<CustomField>
    <fullName>ClosureOwnerRole__c</fullName>
    <label>ClosureOwnerRole</label>
    <type>TextArea</type>
</CustomField>