force-app/main/default/objects/Case/fields/Complaint__c.field-meta.xml
<CustomField>
    <fullName>Complaint__c</fullName>
    <description>Identify if the case is a complaint or not</description>
    <inlineHelpText>A complaint is defined as a customer&apos;s expression of dissatisfaction related to our products, services or our complaints handling process itself.</inlineHelpText>
    <label>Complaint</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>