force-app/main/default/objects/Case/fields/Connote_number__c.field-meta.xml
<CustomField>
    <fullName>Connote_number__c</fullName>
    <description>Temporary field used by StarTrack Business Solutions Tactical Email Solution to allow consultants to document the connote number related to the enquiry</description>
    <label>Connote #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>