force-app/main/default/objects/Case/fields/Consignment_Unique_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Consignment_Unique_External_ID__c</fullName>
    <description>StarTrack - Unique External ID for TEAM and Track &amp; Trace Consignment.</description>
    <inlineHelpText>Unique External ID for TEAM and Track &amp; Trace Consignment</inlineHelpText>
    <label>Consignment Unique External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>