force-app/main/default/objects/Case/fields/ConsignmentSummaryStatus__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentSummaryStatus__c</fullName>
    <formula>ArticleTest__r.Consignment_Summary_Status__c</formula>
    <label>Consignment Summary Status</label>
    <type>Text</type>
</CustomField>