force-app/main/default/objects/Case/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>Used for Snap IT created case.</description>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>