force-app/main/default/objects/Case/fields/Contact_Suburb__c.field-meta.xml
<CustomField>
    <fullName>Contact_Suburb__c</fullName>
    <label>Contact Suburb</label>
    <length>30</length>
    <type>Text</type>
</CustomField>