force-app/main/default/objects/Case/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>Sales implementation case</description>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>