force-app/main/default/objects/Case/fields/Cost_Saving_per_Annum__c.field-meta.xml
<CustomField>
    <fullName>Cost_Saving_per_Annum__c</fullName>
    <label>Cost Saving per Annum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>