force-app/main/default/objects/Case/fields/Credit_Person_Code__c.field-meta.xml
<CustomField>
    <fullName>Credit_Person_Code__c</fullName>
    <description>Will capture related billing account credit note person.</description>
    <label>Credit Person Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>