force-app/main/default/objects/Case/fields/Customer_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Customer_Relationship__c</fullName>
    <description>.</description>
    <inlineHelpText>The Snapit case requester&apos;s relationship with customers.</inlineHelpText>
    <label>Customer Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Relationship</valueSetName>
    </valueSet>
</CustomField>