force-app/main/default/objects/Case/fields/Customer_Stream__c.field-meta.xml
<CustomField>
    <fullName>Customer_Stream__c</fullName>
    <formula>IMAGE( 
CASE(Account.StarTrack_Customer_Stream__c, 
&apos;Sapphire&apos;, &apos;/resource/StarTrackCaseIcons/Sapphire.png&apos;, 
&apos;Emerald&apos;, &apos;/resource/StarTrackCaseIcons/Emerald.png&apos;, 
&apos;Ruby&apos;, &apos;/resource/StarTrackCaseIcons/Ruby.png&apos;, 
&apos;&apos;, &apos;/resource/StarTrackCaseIcons/Other.png&apos;,&apos;/resource/StarTrackCaseIcons/Other.png&apos;),&apos;Other&apos; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Stream</label>
    <type>Text</type>
</CustomField>