force-app/main/default/objects/Case/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <description>SSSW - Shows the Customer type on Account</description>
    <formula>IF(NOT(ISPICKVAL(CustomerQueueType__c,&apos;&apos;)), TEXT(CustomerQueueType__c), 
IF(NOT(ISPICKVAL(Account.ServiceSLA__c,&apos;&apos;)), TEXT(Account.ServiceSLA__c), 
IF(NOT(ISPICKVAL(Contact.Account.ServiceSLA__c,&apos;&apos;)), TEXT(Contact.Account.ServiceSLA__c),
&apos;Consumer&apos; )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Type</label>
    <type>Text</type>
</CustomField>