force-app/main/default/objects/Case/fields/CustomerQueueType__c.field-meta.xml
<CustomField>
    <fullName>CustomerQueueType__c</fullName>
    <label>Customer Queue Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consumer</fullName>
                <default>true</default>
                <label>Consumer</label>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>MyPost Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>