force-app/main/default/objects/Case/fields/Date_Issue_Occurred__c.field-meta.xml
<CustomField>
    <fullName>Date_Issue_Occurred__c</fullName>
    <description>Used by ULD Allocation case</description>
    <label>Date Issue Occurred</label>
    <type>Date</type>
</CustomField>