force-app/main/default/objects/Case/fields/Date_Rates_Entered__c.field-meta.xml
<CustomField>
    <fullName>Date_Rates_Entered__c</fullName>
    <label>Date Rates Entered</label>
    <type>DateTime</type>
</CustomField>