force-app/main/default/objects/Case/fields/DDC_Receiver_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>DDC_Receiver_Last_Name__c</fullName>
    <label>Receiver Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>