force-app/main/default/objects/Case/fields/Deal_Support_Request__c.field-meta.xml
<CustomField>
    <fullName>Deal_Support_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to a deal support request</description>
    <label>Deal Support Request</label>
    <referenceTo>Deal_Support_Request__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>