force-app/main/default/objects/Case/fields/Delivery_Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Collection_Date__c</fullName>
    <description>StarTrack Delivery/Collection Date field will hold the specified date for delivery/collection.</description>
    <label>Delivery/Collection Date</label>
    <type>Date</type>
</CustomField>