force-app/main/default/objects/Case/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <description>StarTrack - Delivery Date</description>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>