force-app/main/default/objects/Case/fields/Description_of_contents__c.field-meta.xml
<CustomField>
    <fullName>Description_of_contents__c</fullName>
    <description>StarTrack field used to capture Description of Goods (Contents)</description>
    <inlineHelpText>Enter contents description for each item in question i.e. Size, weight, colour</inlineHelpText>
    <label>Description Of Contents</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>