force-app/main/default/objects/Case/fields/Description_of_packaging__c.field-meta.xml
<CustomField>
    <fullName>Description_of_packaging__c</fullName>
    <description>StarTrack field used to capture Description of Goods (Packaging)</description>
    <inlineHelpText>Enter packaging description for each item in question i.e. Material, size, weight, colour</inlineHelpText>
    <label>Description Of Packaging</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>