force-app/main/default/objects/Case/fields/Dispatch_Date__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Date__c</fullName>
    <description>StarTrack - Dispatch Date</description>
    <label>Dispatch Date</label>
    <type>Date</type>
</CustomField>