force-app/main/default/objects/Case/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Date work is required to be completed</description>
    <inlineHelpText>Date by which work needs to be completed</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>