force-app/main/default/objects/Case/fields/Email_Bypass_Data_enforcement__c.field-meta.xml
<CustomField>
    <fullName>Email_Bypass_Data_enforcement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Bypass Data enforcement?</label>
    <type>Checkbox</type>
</CustomField>