force-app/main/default/objects/Case/fields/Enquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Type__c</fullName>
    <description>StarTrack - Enquiry Type</description>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Call_Purpose__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>2nd Follow up</fullName>
            </value>
            <value>
                <fullName>3rd Follow up</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Aus Post</fullName>
            </value>
            <value>
                <fullName>Billing Dispute</fullName>
            </value>
            <value>
                <fullName>Billing issue</fullName>
            </value>
            <value>
                <fullName>Billing - Verification/Explanation</fullName>
            </value>
            <value>
                <fullName>Book in</fullName>
            </value>
            <value>
                <fullName>Booking</fullName>
            </value>
            <value>
                <fullName>Business Feedback</fullName>
            </value>
            <value>
                <fullName>Call back request</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Casual</fullName>
            </value>
            <value>
                <fullName>Casual 2nd Missed</fullName>
            </value>
            <value>
                <fullName>Casual 3rd Missed</fullName>
            </value>
            <value>
                <fullName>Casual 4th+ Missed</fullName>
            </value>
            <value>
                <fullName>CCM Exgratia (Cust Claim Met)</fullName>
            </value>
            <value>
                <fullName>Check Address</fullName>
            </value>
            <value>
                <fullName>COD</fullName>
            </value>
            <value>
                <fullName>Confirm Rates</fullName>
            </value>
            <value>
                <fullName>Controlled Returns</fullName>
            </value>
            <value>
                <fullName>Copy of Connote</fullName>
            </value>
            <value>
                <fullName>Copy of Document</fullName>
            </value>
            <value>
                <fullName>Copy of Invoice</fullName>
            </value>
            <value>
                <fullName>Copy of POD</fullName>
            </value>
            <value>
                <fullName>Customer Urgency Requested</fullName>
            </value>
            <value>
                <fullName>Customs Held</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Delivery Dispute</fullName>
            </value>
            <value>
                <fullName>Delivery On Track</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>