force-app/main/default/objects/Case/fields/eParcelDamages__c.field-meta.xml
<CustomField>
    <fullName>eParcelDamages__c</fullName>
    <label>eParcel Damages</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>