force-app/main/default/objects/Case/fields/EscalationEmail__c.field-meta.xml
<CustomField>
    <fullName>EscalationEmail__c</fullName>
    <label>EscalationEmail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>