force-app/main/default/objects/Case/fields/ExtraCover__c.field-meta.xml
<CustomField>
    <fullName>ExtraCover__c</fullName>
    <description>Used for Contact Us Form</description>
    <label>Extra Cover</label>
    <length>255</length>
    <type>Text</type>
</CustomField>