force-app/main/default/objects/Case/fields/Facility_Milestones_Violated__c.field-meta.xml
<CustomField>
    <fullName>Facility_Milestones_Violated__c</fullName>
    <label>Network Milestones Violated</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>