force-app/main/default/objects/Case/fields/Facility_Tier_Escalation_Email__c.field-meta.xml
<CustomField>
    <fullName>Facility_Tier_Escalation_Email__c</fullName>
    <label>Network Tier Escalation Email</label>
    <type>Email</type>
</CustomField>