force-app/main/default/objects/Case/fields/First_Email_Response__c.field-meta.xml
<CustomField>
    <fullName>First_Email_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <description>StarTrack field used to flag that an Email has been sent outbound on a case indicating 1st customer response</description>
    <label>First Email Response</label>
    <type>Checkbox</type>
</CustomField>