force-app/main/default/objects/Case/fields/First_response__c.field-meta.xml
<CustomField>
    <fullName>First_response__c</fullName>
    <description>Time taken until the first response</description>
    <label>Agent first response</label>
    <type>DateTime</type>
</CustomField>