force-app/main/default/objects/Case/fields/FOS_Resolution_Point__c.field-meta.xml
<CustomField>
    <fullName>FOS_Resolution_Point__c</fullName>
    <label>FOS Resolution Point</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registration &amp; Referral</fullName>
            </value>
            <value>
                <fullName>TOR Review</fullName>
            </value>
            <value>
                <fullName>Case Management 1</fullName>
            </value>
            <value>
                <fullName>Case Management 2 (Standard)</fullName>
            </value>
            <value>
                <fullName>Case Management - Concilliation (Standard)</fullName>
            </value>
            <value>
                <fullName>Case Management - Concilliation (Complex)</fullName>
            </value>
            <value>
                <fullName>Fast Track - Preliminary View</fullName>
            </value>
            <value>
                <fullName>Fast Track - Decision</fullName>
            </value>
            <value>
                <fullName>Referred to NCCC</fullName>
            </value>
            <value>
                <fullName>Direct Contact</fullName>
            </value>
            <value>
                <fullName>Possible Systemic Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>