force-app/main/default/objects/Case/fields/GetFeedbackSurveyResponse__c.field-meta.xml
<CustomField>
    <fullName>GetFeedbackSurveyResponse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup field is looking at survey response record from Get Feedback Custom Object.</description>
    <label>GetFeedback Survey Response</label>
    <referenceTo>GetFeedback_Survey__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>